--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,9 +14,19 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin="true"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300;400;500;700;800;900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<main class="min-h-[100vh] w-full flex justify-center"><slot /></main>
 	</body>
 </html>
