--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
-
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Hello World</h1>
-	</main>
+<Layout title="everybody.gives">
+	<div class="min-h-full flex items-center flex-col justify-center p-[100px]">
+		<div class="mt-5 sm:mt-8 flex self-start">
+			<a href="/new-group">
+				Hello Dev 👋
+			</a>
+		</div>
+	</div>
 </Layout>
